2016-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Adding utctime() and utcdate() to export()

	* R/anytime.R: Expanded documentation in Notes section (also
	merging the Issues section in)
	* man/anytime.Rd: Ditto

2016-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (anytime_cpp): New option asUTC (defaulting to
	false) which governs whether parsing is as localtime or UTC
	(ptToDoubleUTC): New UTC conversion of ptime to double
	(stringToTime): Dispatch to either ptToDouble or ptToDoubleUTC

	* R/anytime.R (anytime): Document new option asUTC;
	add and document new callers utctime() and utcdate()
	* man/anytime.Rd: Document new options and functions

2016-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2016-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (anytime_cpp): Also recognise as.numeric()
	conversions of POSIXt objects

	* R/anytime.R: Expand manual page text with section on Issues, correct
	working on Notes.
	* man/anytime.Rd: Ditto

	* tests/allFormats.R: Additional tests

	* README.md: Reformated code display slightly

2016-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Process non-finite values as well
	and return NA

	* R/init.R (.onLoad): Also test for NA to invoke gettz, and test for
	NA and NULL before using fallback of UTC (with warning)

2016-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Templated conversion avoids UBSAN
	on a temporary object created from SEXP; renamed from anytime_impl

	* cleanup: New helper script

2016-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]]): Add several new date(time) formats
	of the 14OCT2016 variety, with and without hours/minutes

	* tests/allFormats.R: Add new tests as well

2016-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* R/anytime.R: Added extra comment to help page
