@@ -21,3 +21,7 @@
 getTZ <- function() {
     .pkgenv$tz
 }
+
+setTZ <- function(tz) {
+    assign("tz", tz, envir=.pkgenv)
+}
